; ModuleID = '/home/carl/AnghaBench/Cinder/src/glload/extr_gl_load.c_ProcExtsFromExtList.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glload/extr_gl_load.c_ProcExtsFromExtList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_NUM_EXTENSIONS = common dso_local global i32 0, align 4
@GL_EXTENSIONS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ProcExtsFromExtList to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ProcExtsFromExtList() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 0, i64* %2, align 8
  %4 = load i32, i32* @GL_NUM_EXTENSIONS, align 4
  %5 = call i32 @_funcptr_glGetIntegerv(i32 %4, i64* %2)
  store i64 0, i64* %1, align 8
  br label %6

6:                                                ; preds = %17, %0
  %7 = load i64, i64* %1, align 8
  %8 = load i64, i64* %2, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %20

10:                                               ; preds = %6
  %11 = load i32, i32* @GL_EXTENSIONS, align 4
  %12 = load i64, i64* %1, align 8
  %13 = call i64 @_funcptr_glGetStringi(i32 %11, i64 %12)
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** %3, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @LoadExtByName(i8* %15)
  br label %17

17:                                               ; preds = %10
  %18 = load i64, i64* %1, align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* %1, align 8
  br label %6

20:                                               ; preds = %6
  ret void
}

declare dso_local i32 @_funcptr_glGetIntegerv(i32, i64*) #1

declare dso_local i64 @_funcptr_glGetStringi(i32, i64) #1

declare dso_local i32 @LoadExtByName(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
